--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "dev": "next dev"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@truffle/hdwallet-provider": "^2.1.12",
+    "dotenv": "^16.3.1",
     "fs-extra": "^11.1.1",
     "ganache": "^7.9.1",
     "mocha": "^10.2.0",
+    "next": "^13.4.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "solc": "^0.8.21",
     "web3": "^4.1.1"
   }
