--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "solc": "^0.8.21",
-    "web3": "^4.1.1"
+    "web3": "^4.2.2"
   }
 }
